--- a/PROJECT_DOCUMENTATION (JUPYTER).ipynb
+++ b/PROJECT_DOCUMENTATION (JUPYTER).ipynb
@@ -47,7 +47,8 @@
     "\n",
     "- Data Reporting: What output should the system include, and do we need to store the final dataset somewhere (e.g. .csv or .txt file)?\n",
     "## Non-Functional requirements\n",
-    "## Use-Case"
+    "- Usability: What is required from the User Interface and a 'README' document?\n",
+    "- Reliability: What is required from the system when providing information to the user on errors and ensuring data integrity?"
    ]
   }
  ],
