finished requirements outline

--- a/PROJECT_DOCUMENTATION (JUPYTER).ipynb
+++ b/PROJECT_DOCUMENTATION (JUPYTER).ipynb
@@ -37,18 +37,34 @@
    "source": [
     "# Requirements Outline\n",
     "## Functional requirements\n",
-    "- Data Loading: Consider aspects such as ability to load certain file types and handling errors in file loading (e.g. incorrect format, missing files).\n",
+    "- Supports loading from common formats: .csv, .xlsx, .json\n",
     "\n",
-    "- Data Cleaning: Does the system need to handle missing values or allow for filtering, sorting and grouping of data?\n",
+    "-  Validates file format and schema before import\n",
     "\n",
-    "- Data Analysis: What kind of statistical analysis does the system need to allow for (e.g. mean, median, mode)?\n",
+    "- Provides descriptive error messages for: Missing files, Unsupported or incorrect formats, Header mismatches\n",
     "\n",
-    "- Data Visualisation: How will the data need to be visualised (e.g. Pandas dataframes / Matplotlib chart types)?\n",
+    "- Identifies and handles missing values (e.g. replace, drop, impute)\n",
     "\n",
-    "- Data Reporting: What output should the system include, and do we need to store the final dataset somewhere (e.g. .csv or .txt file)?\n",
+    "- Allows: Filtering based on conditions (e.g. date, category), Sorting by column values, Grouping data for aggregation or segmentation\n",
+    "\n",
+    "- Provides statistical functions: Descriptive stats (mean, median, mode, std deviation), Count and frequency distributions, Correlation analysis (e.g. Pearson, Spearman)\n",
+    "\n",
+    "- Interactive display of data using: Pandas DataFrames for quick inspection, Matplotlib for: Line, bar, pie, scatter, box plots\n",
+    "\n",
+    "- Configurable axes, titles, legends, color palettes\n",
+    "\n",
+    "- Generates: Summary reports with key metrics, Export of cleaned/processed dataset in .csv or .txt\n",
+    "\n",
+    "- Enables saving data to local or cloud storage\n",
+    "\n",
     "## Non-Functional requirements\n",
-    "- Usability: What is required from the User Interface and a 'README' document?\n",
-    "- Reliability: What is required from the system when providing information to the user on errors and ensuring data integrity?"
+    "- User Interface: Clean, intuitive dashboard, Toggle switches and dropdowns for filtering and chart selection\n",
+    "\n",
+    "- README documentation: Clear setup instructions, Examples of typical workflows, Explanation of key features and limitations\n",
+    "\n",
+    "- Error Handling: Displays informative messages with suggestions for resolution, Logs errors to a file or console for debugging\n",
+    "\n",
+    "- Data Integrity: Validates input data structure before processing, Keeps backup of original dataset, Tracks version history for modifications"
    ]
   }
  ],
