--- a/PROJECT_DOCUMENTATION (JUPYTER).ipynb
+++ b/PROJECT_DOCUMENTATION (JUPYTER).ipynb
@@ -64,7 +64,71 @@
     "\n",
     "- Error Handling: Displays informative messages with suggestions for resolution, Logs errors to a file or console for debugging\n",
     "\n",
-    "- Data Integrity: Validates input data structure before processing, Keeps backup of original dataset, Tracks version history for modifications"
+    "- Data Integrity: Validates input data structure before processing, Keeps backup of original dataset, Tracks version history for modifications\n",
+    "\n",
+    "## Use Case\n",
+    "#### Preconditions:\n",
+    "- The dataset has been preloaded into the system by an administrator or via automated ingestion.\n",
+    "- The user has access to the system via a terminal or command-line interface.\n",
+    "- The system has successfully validated and cleaned the dataset.\n",
+    "\n",
+    "#### Main Flow:\n",
+    "Welcome to the Hypothesis Testing System\n",
+    "Please choose an option:\n",
+    "1. View summary statistics\n",
+    "2. Visualize data\n",
+    "3. Filter or search data\n",
+    "4. Update a data entry\n",
+    "5. Export report\n",
+    "6. Exit\n",
+    "\n",
+    "Option 1: View summary statistics\n",
+    "- System displays mean, median, mode, and standard deviation for selected columns.\n",
+    "\n",
+    "Option 2: Visualize data\n",
+    "- User chooses chart type (e.g. bar, scatter, line) and variables.\n",
+    "- System renders the chart using Matplotlib and displays it.\n",
+    "\n",
+    "Option 3: Filter or search data\n",
+    "- User inputs filter criteria (e.g. age > 30, region = 'NSW')\n",
+    "- System displays matching records in tabular format.\n",
+    "\n",
+    "Option 4: Update a data entry\n",
+    "- User specifies row ID and column to update.\n",
+    "- System confirms the change and saves it.\n",
+    "\n",
+    "Option 5: Export report\n",
+    "- System generates a .csv file with current data and saves it locally.\n",
+    "\n",
+    "#### Postconditions:\n",
+    "User has successfully viewed, analyzed, or modified the dataset.\n",
+    "\n",
+    "Any valid updates are saved to the system and logged.\n",
+    "\n",
+    "The dataset remains accessible for future queries, visualizations, or exports."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "341622b4",
+   "metadata": {},
+   "source": [
+    "# Research your chosen issue\n",
+    "- https://australianpropertyupdate.com.au/apu/grim-housing-shortfall-numbers-revealed\n",
+    "- https://www.realestate.com.au/insights/new-housing-supply-falls-short-by-62000-homes-in-2024/\n",
+    "- https://www.ahuri.edu.au/sites/default/files/documents/2021-10/AHURI-Final-Report-365-Population-growth-and-mobility-in-Australia.pdf\n",
+    "- https://population.org.au/wp-content/uploads/2023/04/housing-crisis-and-population-briefing-note-final1.pdf\n",
+    "- https://ipa.org.au/publications-ipa/media-releases/as-migration-surges-to-record-levels-housing-construction-collapses\n",
+    "\n",
+    "# Discuss the findings\n",
+    "Housing and construction data in Australia is comprehensively tracked through sources like the ABS Building Activity report, CSIRO’s Australian Housing Data portal, and the AIHW Housing Data Dashboard. These platforms collectively monitor trends in dwelling commencements, sustainability performance, and housing affordability. For instance, the ABS shows fluctuations in construction activity, while CSIRO tracks energy ratings of new homes, and AIHW presents data on rental stress and ownership. Imagine these tools as different lenses on the same landscape one shows how fast homes are being built, another how green they are, and the third how accessible they are to Australians. Together, they offer a multi dimensional view of the housing sector.\n",
+    "\n",
+    "# Aquire your data\n",
+    "- https://www.abs.gov.au/statistics/industry/building-and-construction/building-activity-australia/latest-release\n",
+    "- https://ahd.csiro.au/\n",
+    "- https://www.housingdata.gov.au/\n",
+    "\n",
+    "# Planning\n"
    ]
   }
  ],
