--- a/PROJECT_DOCUMENTATION (JUPYTER).ipynb
+++ b/PROJECT_DOCUMENTATION (JUPYTER).ipynb
@@ -128,7 +128,7 @@
     "- https://ahd.csiro.au/\n",
     "- https://www.housingdata.gov.au/\n",
     "\n",
-    "# Planning\n"
+    "# Planning"
    ]
   }
  ],
