make it look nicer

--- a/PROJECT_DOCUMENTATION (JUPYTER).ipynb
+++ b/PROJECT_DOCUMENTATION (JUPYTER).ipynb
@@ -35,8 +35,8 @@
    "id": "2ca1fb5c",
    "metadata": {},
    "source": [
-    "# Requirements Outline\n",
-    "## Functional requirements\n",
+    "# **Requirements Outline**\n",
+    "## *<span style=\"color:red;\">Functional requirements</span>*\n",
     "- Supports loading from common formats: .csv, .xlsx, .json\n",
     "\n",
     "-  Validates file format and schema before import\n",
@@ -57,7 +57,7 @@
     "\n",
     "- Enables saving data to local or cloud storage\n",
     "\n",
-    "## Non-Functional requirements\n",
+    "## *<span style=\"color:blue;\">Non-Functional requirements</span>*\n",
     "- User Interface: Clean, intuitive dashboard, Toggle switches and dropdowns for filtering and chart selection\n",
     "\n",
     "- README documentation: Clear setup instructions, Examples of typical workflows, Explanation of key features and limitations\n",
@@ -66,13 +66,13 @@
     "\n",
     "- Data Integrity: Validates input data structure before processing, Keeps backup of original dataset, Tracks version history for modifications\n",
     "\n",
-    "## Use Case\n",
-    "#### Preconditions:\n",
+    "## *Use Case*\n",
+    "### Preconditions:\n",
     "- The dataset has been preloaded into the system by an administrator or via automated ingestion.\n",
     "- The user has access to the system via a terminal or command-line interface.\n",
     "- The system has successfully validated and cleaned the dataset.\n",
     "\n",
-    "#### Main Flow:\n",
+    "### Main Flow:\n",
     "Welcome to the Hypothesis Testing System\n",
     "Please choose an option:\n",
     "1. View summary statistics\n",
@@ -113,22 +113,22 @@
    "id": "341622b4",
    "metadata": {},
    "source": [
-    "# Research your chosen issue\n",
+    "# **Research your chosen issue**\n",
     "- https://australianpropertyupdate.com.au/apu/grim-housing-shortfall-numbers-revealed\n",
     "- https://www.realestate.com.au/insights/new-housing-supply-falls-short-by-62000-homes-in-2024/\n",
     "- https://www.ahuri.edu.au/sites/default/files/documents/2021-10/AHURI-Final-Report-365-Population-growth-and-mobility-in-Australia.pdf\n",
     "- https://population.org.au/wp-content/uploads/2023/04/housing-crisis-and-population-briefing-note-final1.pdf\n",
     "- https://ipa.org.au/publications-ipa/media-releases/as-migration-surges-to-record-levels-housing-construction-collapses\n",
     "\n",
-    "# Discuss the findings\n",
+    "# **Discuss the findings**\n",
     "Housing and construction data in Australia is comprehensively tracked through sources like the ABS Building Activity report, CSIRO’s Australian Housing Data portal, and the AIHW Housing Data Dashboard. These platforms collectively monitor trends in dwelling commencements, sustainability performance, and housing affordability. For instance, the ABS shows fluctuations in construction activity, while CSIRO tracks energy ratings of new homes, and AIHW presents data on rental stress and ownership. Imagine these tools as different lenses on the same landscape one shows how fast homes are being built, another how green they are, and the third how accessible they are to Australians. Together, they offer a multi dimensional view of the housing sector.\n",
     "\n",
-    "# Aquire your data\n",
+    "# **Aquire your data**\n",
     "- https://www.abs.gov.au/statistics/industry/building-and-construction/building-activity-australia/latest-release\n",
     "- https://ahd.csiro.au/\n",
     "- https://www.housingdata.gov.au/\n",
     "\n",
-    "# Planning"
+    "# **Planning**\n"
    ]
   }
  ],
