finished phase 2 and moving onto phase 3

--- a/PROJECT_DOCUMENTATION (JUPYTER).ipynb
+++ b/PROJECT_DOCUMENTATION (JUPYTER).ipynb
@@ -26,7 +26,7 @@
    "id": "107fc099",
    "metadata": {},
    "source": [
-    "# Define your purpose (Hypothesis)\n",
+    "# **Define your purpose (Hypothesis)**\n",
     "- Housing construction in Australia is not keeping pace with population growth."
    ]
   },
@@ -35,8 +35,8 @@
    "id": "2ca1fb5c",
    "metadata": {},
    "source": [
-    "# **Requirements Outline**\n",
-    "## *<span style=\"color:red;\">Functional requirements</span>*\n",
+    "# *Requirements Outline*\n",
+    "## <span style=\"color:red;\">Functional requirements</span>\n",
     "- Supports loading from common formats: .csv, .xlsx, .json\n",
     "\n",
     "-  Validates file format and schema before import\n",
@@ -57,7 +57,7 @@
     "\n",
     "- Enables saving data to local or cloud storage\n",
     "\n",
-    "## *<span style=\"color:blue;\">Non-Functional requirements</span>*\n",
+    "## <span style=\"color:blue;\">Non-Functional requirements</span>\n",
     "- User Interface: Clean, intuitive dashboard, Toggle switches and dropdowns for filtering and chart selection\n",
     "\n",
     "- README documentation: Clear setup instructions, Examples of typical workflows, Explanation of key features and limitations\n",
@@ -66,13 +66,13 @@
     "\n",
     "- Data Integrity: Validates input data structure before processing, Keeps backup of original dataset, Tracks version history for modifications\n",
     "\n",
-    "## *Use Case*\n",
-    "### Preconditions:\n",
+    "# *Use Case*\n",
+    "## Preconditions:\n",
     "- The dataset has been preloaded into the system by an administrator or via automated ingestion.\n",
     "- The user has access to the system via a terminal or command-line interface.\n",
     "- The system has successfully validated and cleaned the dataset.\n",
     "\n",
-    "### Main Flow:\n",
+    "## Main Flow:\n",
     "Welcome to the Hypothesis Testing System\n",
     "Please choose an option:\n",
     "1. View summary statistics\n",
@@ -100,7 +100,7 @@
     "Option 5: Export report\n",
     "- System generates a .csv file with current data and saves it locally.\n",
     "\n",
-    "#### Postconditions:\n",
+    "## Postconditions:\n",
     "User has successfully viewed, analyzed, or modified the dataset.\n",
     "\n",
     "Any valid updates are saved to the system and logged.\n",
@@ -113,28 +113,58 @@
    "id": "341622b4",
    "metadata": {},
    "source": [
-    "# **Research your chosen issue**\n",
+    "# *Research your chosen issue*\n",
     "- https://australianpropertyupdate.com.au/apu/grim-housing-shortfall-numbers-revealed\n",
     "- https://www.realestate.com.au/insights/new-housing-supply-falls-short-by-62000-homes-in-2024/\n",
     "- https://www.ahuri.edu.au/sites/default/files/documents/2021-10/AHURI-Final-Report-365-Population-growth-and-mobility-in-Australia.pdf\n",
     "- https://population.org.au/wp-content/uploads/2023/04/housing-crisis-and-population-briefing-note-final1.pdf\n",
     "- https://ipa.org.au/publications-ipa/media-releases/as-migration-surges-to-record-levels-housing-construction-collapses\n",
     "\n",
-    "# **Discuss the findings**\n",
+    "# *Discuss the findings*\n",
     "Housing and construction data in Australia is comprehensively tracked through sources like the ABS Building Activity report, CSIRO’s Australian Housing Data portal, and the AIHW Housing Data Dashboard. These platforms collectively monitor trends in dwelling commencements, sustainability performance, and housing affordability. For instance, the ABS shows fluctuations in construction activity, while CSIRO tracks energy ratings of new homes, and AIHW presents data on rental stress and ownership. Imagine these tools as different lenses on the same landscape one shows how fast homes are being built, another how green they are, and the third how accessible they are to Australians. Together, they offer a multi dimensional view of the housing sector.\n",
     "\n",
-    "# **Aquire your data**\n",
+    "# *Aquire your data*\n",
     "- https://www.abs.gov.au/statistics/industry/building-and-construction/building-activity-australia/latest-release\n",
     "- https://ahd.csiro.au/\n",
     "- https://www.housingdata.gov.au/\n",
     "\n",
-    "# **Planning**\n"
+    "# *Planning*\n",
+    "## Data Dictionary – Total Dwellings Commenced\n",
+    "\n",
+    "| Field Name             | Description                                                                                               | Data Type | Format / Example | Notes |\n",
+    "|------------------------|-----------------------------------------------------------------------------------------------------------|-----------|------------------|-------|\n",
+    "| **Period**             | Calendar quarter in which dwelling construction commenced, expressed as a year–quarter label             | String    | `Mar-17`         | Months are `Mar`, `Jun`, `Sep`, `Dec` followed by two‑digit year. Data runs from Mar‑2017 to Mar‑2025. |\n",
+    "| **Trend**              | Estimated number of dwellings commenced in that quarter, adjusted for long‑term trend patterns           | Integer   | `54,463`         | Figures are counts of dwellings. Useful for spotting structural shifts without seasonal variation. |\n",
+    "| **Seasonally adjusted**| Estimated number of dwellings commenced in that quarter, adjusted to remove regular seasonal fluctuations | Integer   | `52,066`         | Makes it easier to compare across different quarters within a year. |\n",
+    "| **Source** *(metadata)*| Origin of the dataset                                                                                     | String    | `Australian Bureau of Statistics, Building Activity, Australia March 2025` | Dataset‑level metadata, not a per‑row field. |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "427d8c56",
+   "metadata": {},
+   "source": [
+    "# **Phase 3: Producing and Implementing**\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
