--- a/PROJECT_DOCUMENTATION (JUPYTER).ipynb
+++ b/PROJECT_DOCUMENTATION (JUPYTER).ipynb
@@ -144,7 +144,9 @@
    "id": "427d8c56",
    "metadata": {},
    "source": [
-    "# **Phase 3: Producing and Implementing**\n"
+    "# **Phase 3: Producing and Implementing**\n",
+    "## *Python, Pandas and Matplotlib*\n",
+    "## *User Interface*"
    ]
   }
  ],
