--- a/PROJECT_DOCUMENTATION (JUPYTER).ipynb
+++ b/PROJECT_DOCUMENTATION (JUPYTER).ipynb
@@ -145,8 +145,49 @@
    "metadata": {},
    "source": [
     "# **Phase 3: Producing and Implementing**\n",
-    "## *Python, Pandas and Matplotlib*\n",
-    "## *User Interface*"
+    "## *Chart using Matplotlib*\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "4d8e9110",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m__future__\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m annotations\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtyping\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Optional, Dict\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
+     ]
+    }
+   ],
+   "source": [
+    "from __future__ import annotations\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from typing import Optional, Dict\n",
+    "\n",
+    "def plot_sa_with_ma(df: pd.DataFrame, save_path: Optional[str] = None, show: bool = False):\n",
+    "    plt.figure(figsize=(12, 6))\n",
+    "    plt.plot(df[\"Date\"], df[\"Seasonally adjusted\"], label=\"Seasonally adjusted\", color=\"#888\", alpha=0.6)\n",
+    "    plt.plot(df[\"Date\"], df[\"SA_4q_ma\"], label=\"Seasonally adjusted (4-quarter MA)\", color=\"#08519c\", linewidth=2.5)\n",
+    "    plt.title(\"Seasonally adjusted with 4-quarter moving average\")\n",
+    "    plt.xlabel(\"Date\")\n",
+    "    plt.ylabel(\"Number of dwellings\")\n",
+    "    plt.grid(True, linestyle=\"--\", alpha=0.5)\n",
+    "    plt.legend()\n",
+    "    plt.tight_layout()\n",
+    "    if save_path:\n",
+    "        plt.savefig(save_path, dpi=150)\n",
+    "    if show:\n",
+    "        plt.show()\n",
+    "    else:\n",
+    "        plt.close()"
    ]
   }
  ],
