--- a/PROJECT_DOCUMENTATION (JUPYTER).ipynb
+++ b/PROJECT_DOCUMENTATION (JUPYTER).ipynb
@@ -26,7 +26,7 @@
    "id": "107fc099",
    "metadata": {},
    "source": [
-    "# **Define your purpose (Hypothesis)**\n",
+    "# *Define your purpose (Hypothesis)*\n",
     "- Housing construction in Australia is not keeping pace with population growth."
    ]
   },
@@ -141,45 +141,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "427d8c56",
+   "id": "1804b685",
    "metadata": {},
    "source": [
-    "# **Phase 3: Producing and Implementing**\n",
-    "## *Chart using Matplotlib*\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "4d8e9110",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from data_module import (\n",
-    "    load_dwellings_csv,\n",
-    "    add_growth_and_ma,\n",
-    "    summarize_series,\n",
-    "    plot_trend_vs_sa,\n",
-    "    plot_sa_qoq,\n",
-    "    plot_sa_with_ma,\n",
-    ")\n",
-    "from __future__ import annotations\n",
-    "from pathlib import Path\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "from typing import Optional, Dict\n",
-    "OUTDIR = Path(\"figures\")\n",
+    "# *Test your analysis*\n",
+    "After testing algorithms, I can ensure they provide accurate results.\n",
     "\n",
+    "# *Analyse and conclude*\n",
+    "Over the last few years, the number of new houses being built in Australia has gone up and down a lot, but when you look at the bigger picture, it’s not keeping up with how fast the population is growing. The seasonally adjusted numbers show the short‑term changes, while the trend line shows the longer‑term pattern, and both make it clear there are big peaks and drops in building activity. Even when we hit a high point in construction, it doesn’t last long enough to meet the constant demand from more people needing homes. This suggests that our housing supply isn’t matching population growth, which could lead to problems like higher house prices and more pressure on the rental market, and it’s worth looking into things like government policies, interest rates, and population data to see what’s making it hard for construction to keep up. This proves my hypothesis to be correct.\n",
     "\n",
-    "def generate_charts(df):\n",
-    "    OUTDIR.mkdir(parents=True, exist_ok=True)\n",
-    "    plot_trend_vs_sa(df, save_path=str(OUTDIR / \"dwellings_trend_vs_sa.png\"), show=False)\n",
-    "    plot_sa_qoq(df, save_path=str(OUTDIR / \"dwellings_sa_qoq.png\"), show=False)\n",
-    "    plot_sa_with_ma(df, save_path=str(OUTDIR / \"dwellings_sa_moving_avg.png\"), show=False)\n",
-    "    print(f\"\\nSaved charts to: {OUTDIR.resolve()}\")\n",
-    "    print(\" - dwellings_trend_vs_sa.png\")\n",
-    "    print(\" - dwellings_sa_qoq.png\")\n",
-    "    print(\" - dwellings_sa_moving_avg.png\")"
+    "# *Peer Evaluation*\n",
+    "* Oscar's repo\n",
+    "\n",
+    "| Plus ✅  | Minus ❌  | Implication 💡  |\n",
+    "|--------------------------|------------------------------|--------------------------------------------------|\n",
+    "| Data is clearly organised with proper headings. | Some data entries are missing or have inconsistent formats. | Missing/inconsistent data could make analysis less accurate, so cleaning the dataset should be a first step before more work. |\n",
+    "| Calculations match expected results when checked manually. | Only 1 chart is presented. | More charts with different values could be shown to help better understand the data. |\n",
+    "| Outputs include both summary tables and visualisations, giving a clear picture. | Could be a bit more advanced with more data to show. | More info could be shown for a better understanding.\n",
+    "\n",
+    "# *Evaluate your project*\n",
+    "The system works well because it can load the housing construction data, clean it up, do the maths to find patterns, and make easy‑to‑read graphs. It matches what I planned in my requirements outline and the numbers are right, based on a reliable source like the ABS. Feedback says the data is well organised and the graphs are useful, but we could make the labels clearer and explain the results more so people understand them better. The project was done in a logical order and runs smoothly, but could still make small improvements to make it even easier to use.\n",
+    "\n",
+    "The data itself is accurate and comes from a trusted source, so there’s not much bias, but it will get old if not updated. It’s also safe to use because there’s no private information in it, but the original file should be kept safe so it’s not changed by mistake. The menu system is simple and works in any terminal, but it could've been better for the overall user experience by adding colour, clearer charts, and maybe more instructions for people who aren’t used to data analysis. To conclude, it’s a solid project and does what I wanted, but there’s room to make it easier to read and keep it up to date."
    ]
   }
  ],
